--- a/locales/cs/ui.dialog.json
+++ b/locales/cs/ui.dialog.json
@@ -4,6 +4,11 @@
     "add": "Přidat"
   },
   "buttons": {
+    "upload": {
+      "idle": "Nahrát",
+      "progress": "Nahrávání",
+      "done": "Nahráno"
+    },
     "cancel": "Zrušit",
     "close": "Zavřít",
     "saveChanges": {
