carousel: add missing locale
Fixes #1511

--- a/locales/cs/ui.commons.json
+++ b/locales/cs/ui.commons.json
@@ -5,5 +5,8 @@
   "moveDown": "posunout dolů",
   "stop-if-executed": "po provedení nepokračuje",
   "continue-if-executed": "po provedení pokračuje",
-  "generate": "Vygenerovat"
+  "generate": "Vygenerovat",
+  "thumbnail": "Miniatura",
+  "yes": "Ano",
+  "no": "Ne"
 }
