--- a/locales/en/ui.dialog.json
+++ b/locales/en/ui.dialog.json
@@ -4,6 +4,7 @@
     "add": "Add"
   },
   "buttons": {
+    "reorder": "Reorder",
     "upload": {
       "idle": "Upload",
       "progress": "Uploading",
