ui: add locale for mark to delete
Fixes #1524

--- a/locales/cs/ui.dialog.json
+++ b/locales/cs/ui.dialog.json
@@ -18,6 +18,7 @@
       "done": "Změny uloženy"
     },
     "something-went-wrong": "Něco se pokazilo",
+    "mark-to-delete": "Označit ke smazání",
     "disable": "Vypnout",
     "enable": "Zapnout",
     "edit": "Upravit",
