--- a/locales/en/ui.dialog.json
+++ b/locales/en/ui.dialog.json
@@ -18,6 +18,7 @@
       "done": "Changes saved"
     },
     "something-went-wrong": "Something went wrong",
+    "mark-to-delete": "Mark to delete",
     "disable": "Disable",
     "enable": "Enable",
     "edit": "Edit",
