ui: add textOverlay delete and show more buttons
Fixes #1559

--- a/locales/cs/ui.commons.json
+++ b/locales/cs/ui.commons.json
@@ -8,5 +8,7 @@
   "generate": "Vygenerovat",
   "thumbnail": "Miniatura",
   "yes": "Ano",
-  "no": "Ne"
+  "no": "Ne",
+  "show-more": "Zobrazit více",
+  "show-less": "Zobrazit méně"
 }
