--- a/locales/cs/ui.dialog.json
+++ b/locales/cs/ui.dialog.json
@@ -23,6 +23,7 @@
     "enable": "Zapnout",
     "edit": "Upravit",
     "delete": "Smazat",
+    "hold-to-delete": "Podržte pro smazání",
     "yes": "Ano",
     "no": "Ne"
   },
