--- a/locales/en/ui.dialog.json
+++ b/locales/en/ui.dialog.json
@@ -23,6 +23,7 @@
     "enable": "Enable",
     "edit": "Edit",
     "delete": "Delete",
+    "hold-to-delete": "Hold to delete",
     "yes": "Yes",
     "no": "No"
   },
