currency: move library to interface
PR https://github.com/sogehige/sogeBot/pull/1584

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -59,6 +59,7 @@
     }
   },
   "webpanel": {
+    "mainCurrency": "Základní měna",
     "display-as": "Zobrazit jako",
     "set-default": "Výchozí nastavení",
     "add": "Přidat",
