--- a/locales/cs/ui.menu.json
+++ b/locales/cs/ui.menu.json
@@ -50,5 +50,6 @@
   "emotes": "Emotikony",
   "eventlist": "Eventlist",
   "stats": "Statistiky",
-  "text": "Text"
+  "text": "Text",
+  "currency": "Měna"
 }
