--- a/locales/en.json
+++ b/locales/en.json
@@ -49,6 +49,7 @@
     "offline": "Stream is currently offline for (if $days>0|$daysd )(if $hours>0|$hoursh )(if $minutes>0|$minutesm )(if $seconds>0|$secondss)"
   },
   "webpanel": {
+    "mainCurrency": "Main currency",
     "display-as": "Display as",
     "set-default": "Set default",
     "add": "Add",
