--- a/locales/en/ui.menu.json
+++ b/locales/en/ui.menu.json
@@ -50,5 +50,6 @@
   "emotes": "Emotes",
   "eventlist": "Eventlist",
   "stats": "Stats",
-  "text": "Text"
+  "text": "Text",
+  "currency": "Currency"
 }
