ui: add number input for settings
Resolves #1515

--- a/locales/cs/ui.systems.bets.json
+++ b/locales/cs/ui.systems.bets.json
@@ -1,6 +1,6 @@
 {
   "settings": {
     "enabled": "Status",
-    "betPercentGain": "Přidejte x procent do výplaty sázek každé možnosti"
+    "betPercentGain": "Přidejte x% do výplaty sázek každé možnosti"
   }
 }
