--- a/locales/en/ui.systems.bets.json
+++ b/locales/en/ui.systems.bets.json
@@ -1,6 +1,6 @@
 {
   "settings": {
     "enabled": "Status",
-    "betPercentGain": "Add x percents to bet payout each option"
+    "betPercentGain": "Add x% to bet payout each option"
   }
 }
