overlays: add simple clips carousel
PR https://github.com/sogehige/sogeBot/pull/1600

--- a/locales/en/ui.menu.json
+++ b/locales/en/ui.menu.json
@@ -51,5 +51,6 @@
   "eventlist": "Eventlist",
   "stats": "Stats",
   "text": "Text",
-  "currency": "Currency"
+  "currency": "Currency",
+  "clipscarousel": "Clips carousel"
 }
