--- a/locales/cs/ui.menu.json
+++ b/locales/cs/ui.menu.json
@@ -51,5 +51,6 @@
   "eventlist": "Eventlist",
   "stats": "Statistiky",
   "text": "Text",
-  "currency": "Měna"
+  "currency": "Měna",
+  "clipscarousel": "Promítačka klipů"
 }
