clipscarousel: add time to nect clip settings
Fixes #1601

--- a/locales/cs/ui/systems/clipscarousel.json
+++ b/locales/cs/ui/systems/clipscarousel.json
@@ -1,6 +1,7 @@
 {
   "settings": {
     "customPeriodInDays": "Za časové období (dny)",
-    "numOfClips": "Počet klipů"
+    "numOfClips": "Počet klipů",
+    "timeToNextClip": "Čas do dalšího klipu (s)"
   }
 }
