integrations move integrations to interface
PR https://github.com/sogehige/sogeBot/pull/1606

--- a/locales/cs/ui.menu.json
+++ b/locales/cs/ui.menu.json
@@ -52,5 +52,9 @@
   "stats": "Statistiky",
   "text": "Text",
   "currency": "Měna",
-  "clipscarousel": "Promítačka klipů"
+  "clipscarousel": "Promítačka klipů",
+  "streamlabs": "Streamlabs",
+  "donationalerts": "DonationAlerts.ru",
+  "twitter": "Twitter",
+  "phillipshue": "Phillips Hue"
 }
